# PyMovAvg

./: README.md  main.py  pyproject.toml
PyMovAvg/: __init__.py
PyMovAvg/Indicators/: MovingAverage.py
PyMovAvg/Scraper/: PlotCollector.py  ScrapData.py
PyMovAvg/View/GUI/: Window.py
PyMovAvg/View/Plot/: AnnotatedCursor.py  Quotes.py  ZoomPan.py
PyMovePlot/Indicators/: MovingAverage.py
PyMovePlot/Scraper/: PlotCollector.py
PyMovePlot/View/GUI/: Toolbar.py  Window.py
PyMovePlot/View/Plot/: AnnotatedCursor.py  Quotes.py  ZoomPan.py
finpy/Indicators/: Indicator.py  MovingAverage.py
finpy/Scraper/: PlotCollector.py
finpy/View/GUI/: Window.py
finpy/View/Plot/: Quotes.py
pyfinflow/Scraper/: PlotCollector.py  ScrapData.py
pyfinflow/View/GUI/: Window.py
pyfinflow/View/Plot/: Quotes.py
resources/: akcje.csv
src/Controler/: PlotController.py
src/Model/: ScrapData.py
src/View/GUI/: Toolbar.py  Window.py
src/View/Plot/: AnnotatedCursor.py  Quotes.py  ZoomPan.py
